--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="../dist/output.css" />
+    <link rel="stylesheet" href="/output.css" />
     <title>Node project || ☺</title>
   </head>
   <body>
     <div class="w-full h-screen bg-gray-300 flex items-center flex-col py-8">
-      <div class="w-5/6 h-2/6 md:w-4/6">
+      <div class="w-5/6 h-2/6 md:w-4/6 lg:w-3/6">
         <div
           class="w-full h-full bg-slate-700 flex justify-center items-center flex-col"
         >
@@ -36,17 +36,19 @@
           <div class=""></div>
         </div>
       </div>
-      <div class="w-5/6 w-full mt-12">
-        <div class="w-full h-96 md:w-4/6 overflow-y-scroll">
+      <!-- Task component -->
+      <div class="w-5/6 h-96 mt-12 md:w-4/6 lg:w-3/6">
+        <h1 class="text-2xl text-slate-800 text-center font-medium">TASKS</h1>
+        <div class="w-full h-full overflow-y-scroll">
           <!-- EACH TASK  -->
           <div
             class="flex justify-between items-center px-4 py-1 mt-2 bg-white"
           >
-            <div class="flex justify-between items-center w-24">
+            <div class="flex justify-between items-center w-16">
               <span class="text-xs text-green-900 font-bold"
                 ><i class="fa-solid fa-circle-check"></i
               ></span>
-              <h3 class="font-bold text-base">First Task</h3>
+              <h3 class="text-slate-600 text-xs font-medium">First Task</h3>
             </div>
             <div class="w-10 flex justify-between items-center">
               <span class="text-xs text-green-900 font-bold cursor-pointer"
